--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -88,6 +88,20 @@ body,
     margin-top: 15px;
 }
 
+/* signup button */
+.signup-button {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000000;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 15px;
+}
 .login-button:hover {
     background-color: #0056b3;
     /* Darker blue on hover */
