--- a/src/pages/TaskCreationPage.css
+++ b/src/pages/TaskCreationPage.css
@@ -230,17 +230,18 @@
 }
 /* Delete Button */
 .delete-button {
-  background-color: transparent;
+  background-color:#ff4d4d ;
   border: none;
-  color: #ff4d4d; /* Red text */
+  color: white;
   font-size: 14px;
   cursor: pointer;
-  font-weight: bold;
   transition: color 0.3s;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
 
 .delete-button:hover {
-  color: #cc0000; /* Darker red on hover */
+  background-color: #cc0000;
 }
 
 /* Updated Next Button Styling */
@@ -260,13 +261,9 @@
   text-align: center; /* Center-align the text */
 }
 
-.next-button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
-}
-
 
 .next-button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+  background-color: #1bd863; /* Darker blue on hover */
 }
 /* Go Back Button Styling */
 .go-back-button {
